src/validation/tests/snapshots/rusty__validation__tests__pou_validation_tests__actions_container_no_name.snap
---
source: src/validation/tests/pou_validation_tests.rs
expression: "&diagnostics"
---
warning: Missing Actions Container Name
  ┌─ <internal>:1:25
  │
1 │ ACTIONS ACTION myAction END_ACTION END_ACTIONS
  │                         ^^^^^^^^^^ Missing Actions Container Name


