src/validation/tests/snapshots/rusty__validation__tests__pou_validation_tests__class_has_implementation.snap
---
source: src/validation/tests/pou_validation_tests.rs
expression: res
---
SyntaxError { message: "A class cannot have an implementation", range: [SourceLocation { span: Range(90..122) }], err_no: syntax__generic_error }

