src/validation/tests/snapshots/rusty__validation__tests__pou_validation_tests__function_no_return_unsupported.snap
---
source: src/validation/tests/pou_validation_tests.rs
expression: "&diagnostics"
---
error[E025]: Function Return type missing
  ┌─ <internal>:1:10
  │
1 │ FUNCTION foo VAR_INPUT END_VAR END_FUNCTION
  │          ^^^ Function Return type missing


