src/validation/tests/snapshots/rusty__validation__tests__pou_validation_tests__in_out_variable_out_of_order.snap
---
source: src/validation/tests/pou_validation_tests.rs
expression: res
---
SyntaxError { message: "Missing inout parameter: myOtherInOut", range: [SourceRange { range: 218..220 }], err_no: pou__missing_action_container }
SyntaxError { message: "Expected a reference for parameter myInOut because their type is InOut", range: [SourceRange { range: 286..290 }], err_no: call__invalid_parameter_type }
SyntaxError { message: "Missing inout parameter: myOtherInOut", range: [SourceRange { range: 280..282 }], err_no: pou__missing_action_container }

