src/validation/tests/snapshots/rusty__validation__tests__pou_validation_tests__output_variable_not_allowed_in_class.snap
---
source: src/validation/tests/pou_validation_tests.rs
expression: res
---
SyntaxError { message: "A class cannot have a var in/out/inout blocks", range: [SourceRange { range: 15..18 }], err_no: syntax__generic_error }

